<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>net.pyrix.mc.factions.Factions</groupId>
  <artifactId>PyrixFactions</artifactId>
  <version>0.1.${buildNumber}</version>
  <scm>
      <connection>scm:svn:http://127.0.0.1/dummy</connection>
      <developerConnection>scm:svn:https://127.0.0.1/dummy</developerConnection>
      <tag>HEAD</tag>
      <url>http://127.0.0.1/dummy</url>
  </scm>  
  <build>
    <sourceDirectory>src</sourceDirectory>
        <resources>
            <resource>
                <directory>src</directory>
                <filtering>true</filtering>
                <includes>
                    <include>plugin.yml</include>
                    <include>config.yml</include>
                    <include>language.yml</include>
                </includes>
            </resource>
        </resources>
    <plugins>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
  		<artifactId>buildnumber-maven-plugin</artifactId>
  		<version>1.4</version>
        <executions>
          <execution>
            <id>buildnumber</id>
            <phase>validate</phase>
            <goals>
              <goal>create</goal>
            </goals>
          </execution>
        </executions> 
	    <configuration>
	        <format>{0,number,integer}</format>
		    <items>
		        <item>buildNumber</item>
		    </items>
          <doCheck>false</doCheck>
          <doUpdate>false</doUpdate>	
	      <revisionOnScmFailure>unknownbuild</revisionOnScmFailure>          
	    </configuration>         					
      </plugin>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.7.0</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
      <plugin>
      	<groupId>org.apache.maven.plugins</groupId>
      	<artifactId>maven-shade-plugin</artifactId>
      	<version>2.4.3</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
          </execution>
        </executions>      	
      </plugin>
    </plugins>
    <finalName>${project.artifactId}-${project.version}</finalName>
  </build>
  <dependencies>
  	<dependency>
  		<groupId>org.reflections</groupId>
  		<artifactId>reflections</artifactId>
  		<version>0.9.11</version>
  	</dependency>
  	<dependency>
  		<groupId>org.codehaus.mojo</groupId>
  		<artifactId>buildnumber-maven-plugin</artifactId>
  		<version>1.4</version>
  		<type>maven-plugin</type>
  	</dependency>
  </dependencies>
</project>